kubernetes-gatekeeper/disallow-latest-tag-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatest
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatest
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          some c
          endswith(input.review.object.spec.containers[c].image, ":latest")
          msg := "Container image uses :latest tag"
        }
